# raytracing_rs

./: Cargo.toml  README.md  image.ppm
src/: camera.rs  color.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs
